--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -2,14 +2,14 @@
 import { Image } from 'astro:assets';
 import Share from "@components/Share.astro";
 import SimilarPosts from "@components/SimilarPosts.astro";
-import { getSinglePage } from "@lib/contentParser.astro";
+import { getAllAuthors, getAllPosts } from "@lib/contentParser";
 import dateFormat from "@lib/utils/dateFormat";
 import similerItems from "@lib/utils/similarItems";
 import { humanize,markdownify,slugify } from "@lib/utils/textConverter";
 import { BiCalendarEdit,BiCategoryAlt } from "react-icons/bi/index.js";
 
-const allAuthors = await getSinglePage("authors");
-const posts = await getSinglePage("posts");
+const allAuthors = await getAllAuthors();
+const posts = await getAllPosts();
 const { post } = Astro.props;
 const similarPosts = similerItems(post, posts, post.slug);
 const { Content } = await post.render();
@@ -21,7 +21,7 @@ const { title, description, authors, categories, image, date, tags } =
   <div class="container">
     <article class="row justify-center">
       <div class="md:col-10 text-center">
-        <h1 set:html={markdownify(title)} class="h2" />
+        <h1 transition:animate="slide" set:html={markdownify(title)} class="h2" />
         <ul class="mt-4 flex flex-wrap items-center justify-center text-text">
           <li class="mx-3">
             {
