--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -1,10 +1,12 @@
 ---
-import TwSizeIndicator from "@components/TwSizeIndicator.astro";
+import { ViewTransitions } from 'astro:transitions';
+
+import TwSizeIndicator from "./components/TwSizeIndicator.astro";
 import config from "@config/config.json";
 import theme from "@config/theme.json";
 import { plainify } from "@lib/utils/textConverter";
-import Footer from "@partials/Footer.astro";
-import Header from "@partials/Header.astro";
+import Footer from "./components/Footer.astro";
+import Header from "./components/Header.astro";
 import "@styles/style.scss";
 
 // font families
@@ -16,14 +18,18 @@ export interface Props {
   title?: string;
   meta_title?: string;
   description?: string;
-  image?: string;
+  image?: {
+		src: string;
+		width: number;
+		height: number;
+		format: 'png' | 'jpg' | 'jpeg' | 'tiff' | 'webp' | 'gif' | 'svg' | 'avif';
+  };
   noindex?: boolean;
   canonical?: string;
 }
 
 // distructure frontmatters
-const { title, meta_title, description, image, noindex, canonical } =
-  Astro.props;
+const { title, meta_title, description, image, noindex, canonical } = Astro.props;
 ---
 
 <!DOCTYPE html>
@@ -138,6 +144,8 @@ const { title, meta_title, description, image, noindex, canonical } =
       }`}
     />
     <meta name="twitter:card" content="summary_large_image" />
+
+    <ViewTransitions />
   </head>
   <body>
     <TwSizeIndicator />
