--- a/src/layouts/components/Header.astro
+++ b/src/layouts/components/Header.astro
@@ -1,5 +1,5 @@
 ---
-import Logo from "@components/Logo.astro";
+import Logo from "./Logo.astro";
 import menu from "@config/menu.json";
 import { IoSearch } from "react-icons/io5/index.js";
 
@@ -11,7 +11,6 @@ export interface ChildNavigationLink {
 export interface NavigationLink {
   name: string;
   url: string;
-  hasChildren?: boolean;
   children?: ChildNavigationLink[];
 }
 
@@ -57,7 +56,7 @@ const { main }: { main: NavigationLink[] } = menu;
       {
         main.map((menu) => (
           <>
-            {menu.hasChildren ? (
+            {menu.children ? (
               <li class="nav-item nav-dropdown group relative cursor-pointer">
                 <span class="nav-link inline-flex items-center">
                   {menu.name}
