--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,18 +1,17 @@
 ---
 import Base from "@layouts/Base.astro";
-import { markdownify } from "@lib/utils/textConverter";
-import { getEntryBySlug } from "astro:content";
-const entry = await getEntryBySlug("pages", "404");
-const { Content } = await entry.render();
+
+const title = "Error 404";
 ---
 
-<Base title={entry.data.title}>
+<Base title={title}>
   <section class="section">
     <div class="container">
       <div class="flex h-[40vh] items-center justify-center">
         <div class="text-center">
-          <h1 class="mb-4" set:html={markdownify(entry.data.title)} />
-          <Content />
+          <h1 transition:animate="slide" class="mb-4">Error 404</h1>
+
+          <h2>Page Not Found</h2>
         </div>
       </div>
     </div>
