--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -2,24 +2,20 @@
 import config from "@config/config.json";
 import Base from "@layouts/Base.astro";
 import { markdownify } from "@lib/utils/textConverter";
-import { getEntryBySlug } from "astro:content";
 import { FaAddressCard, FaEnvelope, FaPhoneAlt } from "react-icons/fa/index.js";
 
-const entry = await getEntryBySlug("pages", "contact");
+const title = "Contact";
+
 const { contact_form_action } = config.params;
 const { address, email, phone } = config.contactinfo;
-const { title, description, meta_title, image } = entry.data;
 ---
 
 <Base
   title={title}
-  meta_title={meta_title}
-  description={description}
-  image={image}
 >
   <section class="section">
     <div class="container">
-      <h1 set:html={markdownify(title)} class="h2 page-heading" />
+      <h1 transition:animate="slide" set:html={markdownify(title)} class="h2 page-heading" />
       <div class="row md:gx-5 gy-5">
         <div class="sm:col-5 md:col-4">
           <p class="mb-8 text-2xl font-bold text-theme-dark">Contact Info</p>
