--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -1,17 +1,17 @@
 ---
 import Base from "@layouts/Base.astro";
-import { getTaxonomy } from "@lib/taxonomyParser.astro";
+import { getAllPostTags } from "@lib/contentParser";
 import { humanize } from "@lib/utils/textConverter";
 
 import { FaHashtag } from "react-icons/fa/index.js";
 
-const tags = await getTaxonomy("posts", "tags");
+const tags = await getAllPostTags();
 ---
 
 <Base title={"Tags"}>
   <section class="section">
     <div class="container text-center">
-      <h1 class="h2 page-heading">Tags</h1>
+      <h1 transition:animate="slide" class="h2 page-heading">Tags</h1>
       <ul class="space-x-4">
         {
           tags.map((tag) => (
