Fix equality comparison operators.

--- a/src/components/Posts.astro
+++ b/src/components/Posts.astro
@@ -10,10 +10,10 @@ const { summary_length } = config.settings;
 const { className, posts, fluid } = Astro.props;
 ---
 
-<div class={`row gy-5 gx-4 ${className} ${posts.length == 1 ? "justify-center" : ""} `}>
+<div class={`row gy-5 gx-4 ${className} ${posts.length === 1 ? "justify-center" : ""} `}>
   {
     posts.map((post: any, i: number) => (
-      <div class={i === 0 && fluid != false ? "col-12" : "col-12 sm:col-6"}>
+      <div class={i === 0 && fluid !== false ? "col-12" : "col-12 sm:col-6"}>
         {post.data.image && (
           <a href={`/${post.slug}`} class="rounded-lg block hover:text-primary overflow-hidden group">
             <Image
@@ -79,7 +79,7 @@ const { className, posts, fluid } = Astro.props;
           </a>
         </h3>
         <p class="text-text">
-          {post.body?.slice(0, Number(i === 0 && fluid != false ? summary_length * 2 : summary_length))}...
+          {post.body?.slice(0, Number(i === 0 && fluid !== false ? summary_length * 2 : summary_length))}...
         </p>
       </div>
     ))
