Don't feature the first post on the home page.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ const posts = featuredPosts.concat(otherPosts).slice(0, 4);
 <Base>
   <section class="section">
     <div class="container">
-      <Posts posts={posts} className="mb-16" />
+      <Posts posts={posts} fluid={false} className="mb-16" />
     </div>
   </section>
 </Base>
