--- a/src/components/SimilarPosts.astro
+++ b/src/components/SimilarPosts.astro
@@ -44,7 +44,7 @@ const { posts } = Astro.props;
             </>
           </li>
         </ul>
-        <h3 class="h5">
+        <h3 class="font-bold text-lg md:text-xl">
           <a href={`/${post.slug}`} class="block hover:text-primary transition duration-300">
             {post.data.title}
           </a>
