--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -9,9 +9,9 @@ const title = "Error 404";
     <div class="container">
       <div class="flex h-[40vh] items-center justify-center">
         <div class="text-center">
-          <h1 transition:animate="slide" class="mb-4">Error 404</h1>
+          <h1 transition:animate="slide" class="text-2xl md:text-3xl font-bold mb-4">Error 404</h1>
 
-          <h2>Page Not Found</h2>
+          <h2 class="text-xl md:text-2xl">Page Not Found</h2>
         </div>
       </div>
     </div>
