--- a/src/pages/categories/index.astro
+++ b/src/pages/categories/index.astro
@@ -11,7 +11,7 @@ import { BiCategoryAlt } from "react-icons/bi/index.js";
 <Base title={"Categories"}>
   <section class="section">
     <div class="container text-center">
-      <h1 transition:animate="slide" class="h2 page-heading">Categories</h1>
+      <h1 transition:animate="slide" class="text-3xl md:text-4xl font-bold page-heading">Categories</h1>
       <ul class="space-x-4">
         {
           categories.map((category) => (
