--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -15,7 +15,7 @@ const { address, email, phone } = config.contactinfo;
 >
   <section class="section">
     <div class="container">
-      <h1 transition:animate="slide" set:html={markdownify(title)} class="h2 page-heading" />
+      <h1 transition:animate="slide" set:html={markdownify(title)} class="text-3xl md:text-4xl font-bold page-heading" />
       <div class="row md:gx-5 gy-5">
         <div class="sm:col-5 md:col-4">
           <p class="mb-8 text-2xl font-bold text-theme-dark">Contact Info</p>
