--- a/src/components/Authors.astro
+++ b/src/components/Authors.astro
@@ -20,7 +20,7 @@ const { authors } = Astro.props;
             />
           </div>
         )}
-        <h3 class="h4 mt-8 mb-3">
+        <h3 class="text-2xl md:text-3xl font-bold mt-8 mb-3">
           <a href={`/authors/${author.slug}`} class="block hover:text-primary transition duration-200">
             {author.data.title}
           </a>
