--- a/src/components/Posts.astro
+++ b/src/components/Posts.astro
@@ -73,7 +73,7 @@ const { className, posts, fluid } = Astro.props;
             </>
           </li>
         </ul>
-        <h3 class="mb-4">
+        <h3 class="text-2xl md:text-3xl font-bold mb-4">
           <a href={`/${post.slug}`} class="block hover:text-primary transition duration-300">
             {post.data.title}
           </a>
