--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -50,7 +50,7 @@ const what_i_do = {
           )}
         </div>
         <div class="sm:col-7 md:col-8">
-          <h1 transition:animate="slide" set:html={markdownify(title)} class="h3 mb-8" />
+          <h1 transition:animate="slide" set:html={markdownify(title)} class="text-2xl md:text-3xl font-bold mb-8" />
 
           <div class="content">
             <p>
@@ -73,12 +73,12 @@ const what_i_do = {
 
   <section class="section pt-0">
     <div class="container">
-      <h3 class="page-heading mb-20">{what_i_do.title}</h3>
+      <h3 class="page-heading text-xl md:text-2xl font-bold mb-20">{what_i_do.title}</h3>
       <div class="row justify-center gy-4 text-center">
         {what_i_do.items.map((item: any) => (
           <div class="lg:col-4 md:col-6">
             <i class="{{.icon}} fa-3x text-primary mb-4"></i>
-            <h4 class="text-dark font-weight-700 mb-3">{item.title}</h4>
+            <h4 class="text-dark font-semibold text-xl md:text-2xl mb-3">{item.title}</h4>
             <p>{item.description}</p>
           </div>
         ))}
