--- a/src/pages/authors/[single].astro
+++ b/src/pages/authors/[single].astro
@@ -44,7 +44,7 @@ const currentPosts = sortPostsByDate.filter((post) => {
   {currentPosts.length > 0 && (
     <section class="section pt-0">
       <div class="container">
-        <h2 class="mb-8 text-center h3">Recent Posts</h2>
+        <h2 class="mb-8 text-center font-bold text-2xl md:text-3xl">Recent Posts</h2>
         <div class={`row gy-4 ${currentPosts.length < 3 ? "justify-center" : ""}`}>
           {currentPosts.map((post: any, i: number) => (
           <div class="col-12 sm:col-6 lg:col-4">
@@ -82,7 +82,7 @@ const currentPosts = sortPostsByDate.filter((post) => {
                 </>
               </li>
             </ul>
-            <h3 class="h5">
+            <h3 class="text-xl md:text-2xl font-bold">
               <a href={`/${post.slug}`} class="block hover:text-primary transition duration-300">
                 {post.data.title}
               </a>
