--- a/src/pages/authors/page/[slug].astro
+++ b/src/pages/authors/page/[slug].astro
@@ -35,7 +35,7 @@ const currentPosts = sortedPosts.slice(indexOfFirstPost, indexOfLastPost);
 <Base title={"Authors"}>
   <section class="section">
     <div class="container text-center">
-      <h1 transition:animate="slide" set:text={markdownify("Authors")} class="page-heading h2" />
+      <h1 transition:animate="slide" set:text={markdownify("Authors")} class="page-heading font-bold text-3xl md:text-4xl" />
       <Authors authors={currentPosts} />
       <Pagination
         section={"authors"}
