--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -27,7 +27,7 @@ const title = humanize(tag || "");
   <div class="section">
     <div class="container">
       <p class="text-center mb-4">Showing Posts From</p>
-      <h1 transition:animate="slide" class="h2 mb-16 text-center text-primary">{title}</h1>
+      <h1 transition:animate="slide" class="text-3xl md:text-4xl font-bold mb-16 text-center text-primary">{title}</h1>
       <Posts posts={filterByTags} fluid={false} />
     </div>
   </div>
