--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -11,7 +11,7 @@ const tags = await getAllPostTags();
 <Base title={"Tags"}>
   <section class="section">
     <div class="container text-center">
-      <h1 transition:animate="slide" class="h2 page-heading">Tags</h1>
+      <h1 transition:animate="slide" class="text-3xl md:text-4xl font-bold page-heading">Tags</h1>
       <ul class="space-x-4">
         {
           tags.map((tag) => (
