Apply Tailwind styles directly to some elements per best practice.
Delete superfluous style file.

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -66,7 +66,7 @@ const { address, email, phone } = config.contactinfo;
               <textarea class="form-textarea w-full" rows="4"></textarea>
             </div>
             <div class="col-12">
-              <button class="btn btn-primary mt-2">Submit Now</button>
+              <button class="btn btn-primary inline-block rounded-lg border font-semibold transition bg-primary text-white mt-2 px-6 py-3">Submit Now</button>
             </div>
           </form>
         </div>
