--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -65,7 +65,7 @@ const what_i_do = {
               elementum venenatis, aenean maximus urna magna elementum.
             </p>
           </div>
-          <a href="/contact" class="btn btn-primary text-white py-2">Get In Touch</a>
+          <a href="/contact" class="btn btn-primary inline-block rounded-lg border font-semibold transition bg-primary text-white mt-2 px-6 py-3">Get In Touch</a>
         </div>
       </div>
     </div>
