Move Search component to components/ folder.

--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -1,6 +1,6 @@
 ---
 import Base from "@layouts/Base.astro";
-import Search from "@layouts/Search";
+import Search from "@components/Search";
 import { getAllPosts } from "@lib/contentParser";
 
 // Retrieve all articles
