--- a/src/components/Share.astro
+++ b/src/components/Share.astro
@@ -8,7 +8,7 @@ import {
 } from "react-icons/io5/index.js";
 
 const { base_url } = config.site;
-const { title, description, slug, className } = Astro.props;
+const { title, description, slug, class: className } = Astro.props;
 ---
 
 <ul class={`${className}`}>
