--- a/src/pages/page/[page].astro
+++ b/src/pages/page/[page].astro
@@ -34,7 +34,7 @@ const currentPosts = sortedPosts.slice(indexOfFirstPost, indexOfLastPost);
 <Base>
   <section class="section">
     <div class="container">
-      <Posts className="mb-16" posts={currentPosts} />
+      <Posts class="mb-16" posts={currentPosts} />
       <Pagination totalPages={totalPages} currentPage={currentPage} />
     </div>
   </section>
