--- a/src/components/Author.astro
+++ b/src/components/Author.astro
@@ -26,7 +26,7 @@ const { Content } = await author.render();
       }
       <h1 transition:animate="slide" set:html={markdownify(title)} class="page-heading font-bold text-2xl md:text-4xl mb-8" />
 
-      <Social source={social} className="social-icons-simple" />
+      <Social source={social} class="social-icons-simple" />
       <div class="content">
         <Content />
       </div>
