--- a/src/layouts/components/Footer.astro
+++ b/src/layouts/components/Footer.astro
@@ -4,6 +4,15 @@ import config from "@config/config.json";
 import menu from "@config/menu.json";
 import social from "@config/social.json";
 import { markdownify } from "@lib/utils/textConverter";
+
+interface NavigationLink {
+  name: string;
+  url: string;
+  children?: NavigationLink[];
+  outline?: boolean;
+}
+
+const footer: NavigationLink[] = menu.footer;
 ---
 
 <footer class="section bg-theme-dark">
@@ -11,10 +20,10 @@ import { markdownify } from "@lib/utils/textConverter";
     {/* footer menu */}
     <ul class="mb-8 space-x-4">
       {
-        menu.footer.map((menu) => (
+        footer.map((navLink) => (
           <li class="inline-block">
-            <a href={menu.url} class="p-4 text-white/75 hover:text-white transition-all">
-              {menu.name}
+            <a href={navLink.url} class="p-4 text-white/75 hover:text-white transition-all">
+              {navLink.name}
             </a>
           </li>
         ))
