--- a/src/layouts/components/Header.astro
+++ b/src/layouts/components/Header.astro
@@ -3,18 +3,14 @@ import Logo from "./Logo.astro";
 import menu from "@config/menu.json";
 import { IoSearch } from "react-icons/io5/index.js";
 
-export interface ChildNavigationLink {
+interface NavigationLink {
   name: string;
   url: string;
+  children?: NavigationLink[];
+  outline?: boolean;
 }
 
-export interface NavigationLink {
-  name: string;
-  url: string;
-  children?: ChildNavigationLink[];
-}
-
-const { main }: { main: NavigationLink[] } = menu;
+const main: NavigationLink[] = menu.main;
 ---
 
 <header class="header pt-6">
@@ -54,21 +50,21 @@ const { main }: { main: NavigationLink[] } = menu;
       class="navbar-nav order-3 hidden w-full md:order-1 md:flex md:w-auto"
     >
       {
-        main.map((menu) => (
+        main.map((navLink) => (
           <>
-            {menu.children ? (
+            {navLink.children ? (
               <li class="nav-item nav-dropdown group relative cursor-pointer">
                 <span class="nav-link inline-flex items-center">
-                  {menu.name}
+                  {navLink.name}
                   <svg class="h-5 w-5 fill-current" viewBox="0 0 20 20">
                     <path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z" />
                   </svg>
                 </span>
                 <ul class="nav-dropdown-list hidden group-hover:block md:invisible md:absolute md:block md:opacity-0 md:group-hover:visible md:group-hover:opacity-100">
-                  {menu.children?.map((child) => (
+                  {navLink.children?.map((childNavLink) => (
                     <li class="nav-dropdown-item">
-                      <a href={child.url} class="nav-dropdown-link">
-                        {child.name}
+                      <a href={childNavLink.url} class="nav-dropdown-link">
+                        {childNavLink.name}
                       </a>
                     </li>
                   ))}
@@ -76,8 +72,8 @@ const { main }: { main: NavigationLink[] } = menu;
               </li>
             ) : (
               <li class="nav-item">
-                <a href={menu.url} class="nav-link block">
-                  {menu.name}
+                <a href={navLink.url} class="nav-link block">
+                  {navLink.name}
                 </a>
               </li>
             )}
