--- a/src/components/Author.astro
+++ b/src/components/Author.astro
@@ -1,7 +1,7 @@
 ---
 import { Image } from 'astro:assets';
+import ContentHeader from '@components/ContentHeader.astro';
 import Social from "@components/Social.astro";
-import { markdownify } from "@lib/utils/textConverter";
 
 const { author } = Astro.props;
 const { title, image, social } = author.data;
@@ -24,7 +24,7 @@ const { Content } = await author.render();
           </div>
         )
       }
-      <h1 transition:animate="slide" set:html={markdownify(title)} class="page-heading font-bold text-2xl md:text-4xl mb-8" />
+      <ContentHeader title={title} />
 
       <Social source={social} class="social-icons-simple" />
       <div class="content">
