--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -73,7 +73,7 @@ const what_i_do = {
 
   <section class="section pt-0">
     <div class="container">
-      <h3 class="page-heading text-xl md:text-2xl font-bold mb-20">{what_i_do.title}</h3>
+      <h3 class="text-center text-xl md:text-2xl font-bold mb-8">{what_i_do.title}</h3>
       <div class="row justify-center gy-4 text-center">
         {what_i_do.items.map((item: any) => (
           <div class="lg:col-4 md:col-6">
