--- a/src/pages/categories/index.astro
+++ b/src/pages/categories/index.astro
@@ -1,5 +1,6 @@
 ---
 import Base from "@layouts/Base.astro";
+import ContentHeader from "@components/ContentHeader.astro";
 import { getAllPostCategories } from "@lib/contentParser";
 import { humanize } from "@lib/utils/textConverter";
 
@@ -11,7 +12,7 @@ import { BiCategoryAlt } from "react-icons/bi/index.js";
 <Base title={"Categories"}>
   <section class="section">
     <div class="container text-center">
-      <h1 transition:animate="slide" class="text-3xl md:text-4xl font-bold page-heading">Categories</h1>
+      <ContentHeader title={"Categories"} />
       <ul class="space-x-4">
         {
           categories.map((category) => (
