Remove superfluous .section class.

--- a/src/layouts/components/Footer.astro
+++ b/src/layouts/components/Footer.astro
@@ -15,7 +15,7 @@ interface NavigationLink {
 const footer: NavigationLink[] = menu.footer;
 ---
 
-<footer class="section bg-theme-dark">
+<footer class="p-5 bg-theme-dark">
   <div class="container text-center">
     {/* footer menu */}
     <ul class="mb-8 space-x-4">
