--- a/src/pages/authors/page/[page].astro
+++ b/src/pages/authors/page/[page].astro
@@ -33,7 +33,7 @@ const currentPosts = sortedPosts.slice(indexOfFirstPost, indexOfLastPost);
 ---
 
 <Base title={"Authors"}>
-  <section class="section">
+  <section>
     <div class="container text-center">
       <ContentHeader title={"Authors"} />
       <Authors authors={currentPosts} />
