--- a/src/pages/categories/index.astro
+++ b/src/pages/categories/index.astro
@@ -10,7 +10,7 @@ import { BiCategoryAlt } from "react-icons/bi/index.js";
 ---
 
 <Base title={"Categories"}>
-  <section class="section">
+  <section>
     <div class="container text-center">
       <ContentHeader title={"Categories"} />
       <ul class="space-x-4">
