--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -14,7 +14,7 @@ const { address, email, phone } = config.contactinfo;
 <Base
   title={title}
 >
-  <section class="section">
+  <section>
     <div class="container">
       <ContentHeader title={title} />
       <div class="row md:gx-5 gy-5">
