--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ const posts = featuredPosts.concat(otherPosts).slice(0, 4);
 ---
 
 <Base>
-  <section class="section">
+  <section>
     <div class="container">
       <Posts posts={posts} fluid={false} class="mb-16" />
     </div>
