--- a/src/pages/page/[page].astro
+++ b/src/pages/page/[page].astro
@@ -32,7 +32,7 @@ const currentPosts = sortedPosts.slice(indexOfFirstPost, indexOfLastPost);
 ---
 
 <Base>
-  <section class="section">
+  <section>
     <div class="container">
       <Posts class="mb-16" posts={currentPosts} />
       <Pagination totalPages={totalPages} currentPage={currentPage} />
