--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -15,7 +15,7 @@ const searchList = posts.map((item) => ({
 ---
 
 <Base title={`Search`}>
-  <section class="section">
+  <section>
     <div class="container">
       <Search client:load searchList={searchList} />
     </div>
