--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -10,7 +10,7 @@ const tags = await getAllPostTags();
 ---
 
 <Base title={"Tags"}>
-  <section class="section">
+  <section>
     <div class="container text-center">
       <ContentHeader title={"Tags"} />
       <ul class="space-x-4">
