--- a/src/components/Author.astro
+++ b/src/components/Author.astro
@@ -8,7 +8,7 @@ const { title, image, social } = author.data;
 const { Content } = await author.render();
 ---
 
-<section class="section">
+<section>
   <div class="container">
     <div class="mb-4 text-center md:px-24">
       {
