--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -18,7 +18,7 @@ const { title, description, authors, categories, image, date, tags } =
   post.data;
 ---
 
-<section class="section">
+<section>
   <div class="container">
     <article class="row justify-center">
       <div class="md:col-10 text-center">
@@ -123,7 +123,7 @@ const { title, description, authors, categories, image, date, tags } =
 <!-- similar posts -->
 {
   similarPosts.length > 0 && (
-    <section class="section pt-0">
+    <section>
       <div class="container">
         <h2 class="mb-8 font-bold text-center text-2xl md:text-3xl">Similar Posts</h2>
         <SimilarPosts posts={similarPosts.slice(0, 3)} />
