--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -33,7 +33,7 @@ const what_i_do = {
   meta_title={meta_title}
   image={author}
 >
-  <section class="section">
+  <section>
     <div class="container">
       <div class="row md:gx-4">
         <div class="sm:col-5 md:col-4">
@@ -71,7 +71,7 @@ const what_i_do = {
     </div>
   </section>
 
-  <section class="section pt-0">
+  <section>
     <div class="container">
       <h3 class="text-center text-xl md:text-2xl font-bold mb-8">{what_i_do.title}</h3>
       <div class="row justify-center gy-4 text-center">
