--- a/src/pages/authors/[author].astro
+++ b/src/pages/authors/[author].astro
@@ -42,7 +42,7 @@ const currentPosts = sortPostsByDate.filter((post) => {
   <Author author={author} />
 
   {currentPosts.length > 0 && (
-    <section class="section pt-0">
+    <section>
       <div class="container">
         <h2 class="mb-8 text-center font-bold text-2xl md:text-3xl">Recent Posts</h2>
         <div class={`row gy-4 ${currentPosts.length < 3 ? "justify-center" : ""}`}>
