--- a/src/pages/authors/index.astro
+++ b/src/pages/authors/index.astro
@@ -14,7 +14,7 @@ const currentPosts = sortedPosts.slice(0, config.settings.pagination);
 ---
 
 <Base title={"Authors"}>
-  <section class="section">
+  <section>
     <div class="container text-center">
       <ContentHeader title={"Authors"} />
       <Authors authors={currentPosts} />
