--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,19 +1,10 @@
 ---
 import Base from "@layouts/Base.astro";
-
-const title = "Error 404";
+import ContentHeader from "@components/ContentHeader.astro";
 ---
 
-<Base title={title}>
-  <section class="section">
-    <div class="container">
-      <div class="flex h-[40vh] items-center justify-center">
-        <div class="text-center">
-          <h1 transition:animate="slide" class="text-2xl md:text-3xl font-bold mb-4">Error 404</h1>
-
-          <h2 class="text-xl md:text-2xl">Page Not Found</h2>
-        </div>
-      </div>
-    </div>
-  </section>
+<Base title={"Error 404"}>
+  <div class="container">
+    <ContentHeader title={"Error 404"} subTitle={"Page Not Found"} />
+  </div>
 </Base>
