--- a/src/components/Authors.astro
+++ b/src/components/Authors.astro
@@ -1,7 +1,14 @@
 ---
 import { Image } from 'astro:assets';
+import type { CollectionEntry } from 'astro:content';
+
 import { markdownify } from "@lib/utils/textConverter";
 import { BsArrowRightCircle } from "react-icons/bs/index.js";
+
+interface Props {
+  authors: CollectionEntry<"authors">[];
+}
+
 const { authors } = Astro.props;
 ---
 
