--- a/src/components/Pagination.astro
+++ b/src/components/Pagination.astro
@@ -1,4 +1,10 @@
 ---
+interface Props {
+  section?: string;
+  currentPage: number;
+  totalPages: number;
+}
+
 const { section, currentPage, totalPages } = Astro.props;
 
 const indexPageLink = currentPage === 2;
