--- a/src/pages/page/[page].astro
+++ b/src/pages/page/[page].astro
@@ -21,6 +21,10 @@ export async function getStaticPaths() {
   return paths;
 }
 
+interface Params {
+  page: number;
+}
+
 const { page } = Astro.params;
 const posts = await getAllPosts();
 const sortedPosts = sortByDate(posts);
