--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -59,7 +59,7 @@
   li {
     @apply inline-block;
     a {
-      @apply block p-3 transition transition duration-300 hover:text-primary;
+      @apply block p-3 transition duration-300 hover:text-primary;
     }
   }
 }
