--- a/src/layouts/components/Logo.astro
+++ b/src/layouts/components/Logo.astro
@@ -6,6 +6,7 @@ import config from "@config/config.json";
 
 interface Props {
   src?: ImageMetadata;
+  class?: string;
 }
 
 const {
@@ -21,10 +22,10 @@ const {
   logo_text: string;
   title: string;
 } = config.site;
-const { src } = Astro.props;
+const { src, class: className } = Astro.props;
 ---
 
-<a href="/" class="navbar-brand block">
+<a href="/" class={`navbar-brand block ${className}`}>
   {
     src ? (
       <Image
